--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@mui/material": "^5.10.5",
     "@mui/x-date-pickers": "^5.0.2",
     "bootstrap": "^5.2.0",
+    "firebase": "^9.12.1",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
+    "react-firebase-hooks": "^5.0.3",
     "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
