--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@mui/material": "^5.10.5",
     "@mui/x-date-pickers": "^5.0.2",
     "bootstrap": "^5.2.0",
+    "firebase": "^9.13.0",
+    "firebase-tools": "^11.15.0",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
